update INVOKESTATIC